# fletfly_workspace

./: .gitignore  README.md  old_fletfly.py  sync.py  sync_readme.py  todo.txt
fletfly_lib/: README.md  pyproject.toml
fletfly_lib/docs/chain/: INTRO.md  README.md  _1.py  _11.py  _11a.py  _12.py  _13.py  _14.py  _15.py  _16.py  _17.py  _18.py  _2.py  _3.py  _4.py  _5.py  _6.py  _8.py  _9.py
fletfly_lib/docs/class/: ATTRIBUTES.md  INTRO.md  README.md  _1.py  _11.py  _11a.py  _12.py  _13.py  _14.py  _16.py  _17.py  _18.py  _2.py  _20.py  _3.py  _4.py  _6.py  _8.py  _9.py
fletfly_lib/docs/declare/: INTRO.md  README.md  _1.py  _11.py  _11a.py  _12.py  _13.py  _2.py  _4.py  _6.py  _7.py  _9.py
fletfly_lib/docs/decoration/: INTRO.md  README.md  _10.py  _11.py  _11a.py  _12.py  _13.py  _2.py  _4.py  _5.py  _7.py  _8.py
fletfly_lib/docs/dict/: INTRO.md  README.md  _1.py  _11.py  _11a.py  _12.py  _13.py  _2.py  _4.py  _7.py  _8.py
fletfly_lib/fletfly/: __init__.py  __init__.pyi
fletfly_lib/fletfly.egg-info/: PKG-INFO  SOURCES.txt
fletfly_lib/fletfly/_core/: _Router.py  _Router.pyi  _route.py  _route.pyi
fletfly_lib/tests/: conftest.py  test_chaining.py  test_class_airway.py  test_fly_ins.py  test_fly_ins_outs.py  test_multi_decorators.py
fletfly_lib/tests/airway_builtins/: test_init.py
fletfly_lib/tests/airways/: test_airway_routing_naming.py  test_airway_subway.py  test_airway_unify_subways.py  test_airways_append.py  test_airways_flags_disabled.py
fletfly_lib/tests/classes/: test_classes_append.py  test_classes_decorators.py  test_classes_dict.py  (+4 more)
(+224 files in other folders)
