[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fletfly"
version = "0.1.0"
description = "flet router engine"
dependencies = [
    "flet",
]

[tool.setuptools]
packages = ["fletfly"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
fletfly = ["*.pyi", "py.typed"]

[tool.pyright]
# Exclude folders completely from project-wide type checking and indexing
